--- a/.settings/com.appcelerator.titanium.mobile.prefs
+++ b/.settings/com.appcelerator.titanium.mobile.prefs
@@ -1,17 +1,16 @@
-android/ATTR_MINIFY=true
 android/ATTR_PROJECT_NAME=xControl
 android/abi=armeabi
-android/distribute_path=/Users/kgividen/Data/Titanium/validControl/delivery
+android/distribute_path=/Users/kgividen/Data/Titanium/xControl/delivery
 android/keystore_alias=xControl
 android/keystore_password=xabler
-android/keystore_path=/Users/kgividen/.android/key/xControlKey
-android/recent_output=/Users/kgividen/Data/Titanium/validControl/delivery
+android/keystore_path=/Users/kgividen/.android/key/xControlKeystore
+android/recent_output=/Users/kgividen/Data/Titanium/xControl/delivery
 android/sdk_version=Google APIs Android 2.3.3
 eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=xControl
 iosLaunchConfigurationAttributes/appid=com.netsmartcompany.xControl
-iosLaunchConfigurationAttributes/certificate=NetSmart LLC (CKBRKJ257J)
+iosLaunchConfigurationAttributes/certificate=Kent Gividen (B2JMVTJ3N3)
 iosLaunchConfigurationAttributes/keychain=
 iosLaunchConfigurationAttributes/sdk_version=6.1
-iosLaunchConfigurationAttributes/uuid=DD8376BD-F2E4-40D0-9EC6-86BD97CD2E50
+iosLaunchConfigurationAttributes/uuid=00A58E8F-0DD7-46DB-A761-4B06A57E14FF
