Added FontAwesome plugin Added pull refresh for iOS and refresh icon for android. Fixed some styling for both platforms. Fixed a couple of refresh issues with the promises. Upgraded to titanium sdk 3.3.0-RC Moved some requires to be in the alloy.js

--- a/app/config.json
+++ b/app/config.json
@@ -1,15 +1,16 @@
 {
-	"global": {
-        "theme":"default"
-    },
-	"env:development": {}, 
-	"env:test": {}, 
-	"env:production": {}, 
-	"os:android": {},
-	"os:blackberry": {},
-	"os:ios": {},
-	"os:mobileweb": {},
-	"dependencies": {
-        "ds.slideMenu":"0.1"
-    }
+  "global": {
+    "theme": "default"
+  },
+  "env:development": {},
+  "env:test": {},
+  "env:production": {},
+  "os:android": {},
+  "os:blackberry": {},
+  "os:ios": {},
+  "os:mobileweb": {},
+  "dependencies": {
+    "ds.slideMenu": "0.1",
+    "com.mattmcfarland.fontawesome": "*"
+  }
 }
