--- a/.settings/com.appcelerator.titanium.android.core.prefs
+++ b/.settings/com.appcelerator.titanium.android.core.prefs
@@ -1,9 +1,19 @@
 android/ATTR_PROJECT_NAME=xControl
+android/ATTR_PROJECT_NAME.type=String
 android/abi=armeabi
+android/abi.type=String
 android/distribute_path=/Users/kgividen/Data/Titanium/xControl/delivery
+android/distribute_path.type=String
+android/key_password=
+android/key_password.type=String
 android/keystore_alias=xControl
+android/keystore_alias.type=String
 android/keystore_password=xabler
+android/keystore_password.type=String
 android/keystore_path=/Users/kgividen/.android/key/xControlKeystore
+android/keystore_path.type=String
 android/recent_output=/Users/kgividen/Data/Titanium/xControl/delivery
+android/recent_output.type=String
 android/sdk_version=2.3.3
+android/sdk_version.type=String
 eclipse.preferences.version=1
