--- a/app/config.json
+++ b/app/config.json
@@ -14,6 +14,7 @@
         "com.mattmcfarland.fontawesome": "*",
         "com.netsmart.buttonToggle": "1.0",
         "com.netsmart.slider": "1.0",
-        "com.netsmartcompany.floatingActionButton": "1.0"
+        "com.netsmartcompany.floatingActionButton": "1.0",
+        "TiCircularSliderBtnWidget": "1.0"
     }
 }
