--- a/app/config.json
+++ b/app/config.json
@@ -16,5 +16,6 @@
         "com.netsmart.slider": "1.0",
         "com.netsmartcompany.floatingActionButton": "1.0",
         "TiCircularSliderBtnWidget": "1.0"
-    }
+    },
+    "backbone": "1.1.2"
 }
